added hgignore and my name

--- a/Manual/openad.tex
+++ b/Manual/openad.tex
@@ -18,7 +18,7 @@
 \DeclareGraphicsExtensions{.pdf}  
 \usepackage[pdftex,bookmarks=true,bookmarksnumbered=true,hypertexnames=false,breaklinks=true]{hyperref}
 \hypersetup{
-  pdfauthor = {Jean Utke, Uwe Naumann},
+  pdfauthor = {Jean Utke, Uwe Naumann, Andrew Lyons},
   pdftitle = {OpenAD/F: User Manual},
   pdfsubject = {user manual},
   pdfkeywords = {OpenAD, Fortran, automatic differentiation, algorithms},
@@ -123,7 +123,8 @@
 
 \title{OpenAD/F: User Manual}
 \author{J.~Utke  \\
-	U.~Naumann \\\\
+	U.~Naumann \\
+	A.~Lyons \\\\
 \scriptsize draft \input{versionInfo.txt} \\
 \scriptsize compiled on \today\ with \\
 \framebox{
