--- a/Manual/autodiff.bib
+++ b/Manual/autodiff.bib
@@ -3199,15 +3199,18 @@
 	year = "1997"
 }
 
-@TECHREPORT{
-	   Hovland1997ADo,
-	author = "Paul D. Hovland and Bijan Mohammadi and Christian H. Bischof",
+@INCOLLECTION{
+	   Hovland1998ADoNS,
+	author = "Paul Hovland and Bijan Mohammadi and Christian Bischof",
 	title = "Automatic Differentiation of {N}avier-{S}tokes Computations",
-	number = "MCS-P687-0997",
-	institution = "Argonne National Laboratory",
-	key = "Hovland1997ADo",
-	referred = "[Hascoet2001AIC].",
-	year = "1997"
+	booktitle = "Computational Methods for Optimal Design and Control",
+	editor = "Jeff Borggaard and John Burns and Eugene Cliff and Scott Schreck",
+	publisher = "Birkh{\"a}user",
+	address = "Boston",
+	pages = "265--284",
+	year = "1998",
+	ad_key = "NS",
+	ad_area = "Computational Fluid Dynamics, Control"
 }
 
 @INPROCEEDINGS{
@@ -16797,18 +16800,24 @@
 	pdf = "http://www.fastopt.com/papers/gieringal02.pdf"
 }
 
-@ARTICLE{
-	   Hascoet2005TAi,
-	journal = "Future Generation Computer Systems",
-	year = "2005",
-	comment = "also Rapport de recherche number 4856, {INRIA} and ANL-MCS/P936-0202, ANL",
-	ad_tools = "TAPENADE",
-	ad_theotech = "Adjoint, Data Flow Analysis, Reverse Mode, Static Analysis",
-	author = "Laurent Hasco{\"e}t and Uwe Naumann and Val{\'e}rie Pascual",
-	title = "{TBR} Analysis in Reverse-Mode Automatic Differentiation",
-	volume = "21",
-	number = "8",
-	doi = "10.1016/j.future.2004.11.009"
+@INCOLLECTION{
+	   Cheng2006ADb,
+	booktitle = "Computational Methods in Science and Technology",
+	author = "B. Cheng",
+	publisher = "Polish Academy of Sciences",
+	year = "2006",
+	title = "A Duality between Forward and Adjoint {MPI} Communication Routines",
+	pages = "23--24",
+	ad_theotech = "Parallelism"
+}
+
+@PHDTHESIS{
+	   Hovland1997ADo,
+	author = "Paul Hovland",
+	title = "Automatic Differentiation of Parallel Programs",
+	year = "1997",
+	school = "University of Illinois at Urbana-Champaign",
+	ad_theotech = "Parallelism"
 }
 
 @INCOLLECTION{
@@ -19058,6 +19067,7 @@
 	author = "Jean Utke and Laurent Hasco{\"e}t and Chris Hill and Paul Hovland and Uwe
 	   Naumann",
 	title = "Toward Adjoinable {MPI}",
+	note = "submitted to PDSEC-09",
 	year = "2009",
 	location = "Rome, Italy",
 	ad_theotech = "Adjoint, Parallelism",
@@ -19106,5 +19116,16 @@
 	   backtracking algorithm can be as much as 66% faster than standard correction algorithms, like
 	   Culberson&#8217;s Iterated Greedy method, while producing a comparable number of colors.",
 	year = "2008"
+}
+
+@PHDTHESIS{
+	   Hovland1997ADophd,
+	author = "Paul D. Hovland",
+	title = "Automatic Differentiation of Parallel Programs",
+	school = "University of Illinois at Urbana-Champaign",
+	address = "Urbana, IL",
+	month = "May",
+	year = "1997",
+	ad_key = "phd"
 }
 
