--- a/Manual/openad.tex
+++ b/Manual/openad.tex
@@ -2602,39 +2602,39 @@ The respective top-level routine is called by the driver with the state structur
 \section{Ancillary Tools}\label{sec:ancillaryTools}
 We provide a number of helper scripts to manage the \OpenADF\ installation.
 % -----------------------------------------------------------------------------------------
-\subsection{The \lstinline{goad} and \lstinline{scmStatus} Scripts} \label{sec:goad}
+\subsection{The \lstinline{openadUpdate} and \lstinline{openadStatus} Scripts} \label{sec:openadUpdate}
 This section is useful only for \OpenADF\ installation made from source 
 code repositories. The binary distribution does not include the scripts 
 and source tar ball does not include the repository data.
 To {\bf\em g}et {\bf\em O}pen{\bf\em AD} components and update the 
-revision from the source code repositories  it is easiest to use the \lstinline{goad} script 
+revision from the source code repositories  it is easiest to use the \lstinline{openadUpdate} script 
 which is written in Python \cite{pythonweb} and can be found  at \\[1ex]
-\hspace*{.3cm}\lstinline{$OPENDADROOT/bin/goad}\\[1ex] %$
+\hspace*{.3cm}\lstinline{$OPENDADROOT/bin/openadUpdate}\\[1ex] %$
 It provides the following command line flags.\\[1ex]
 \begin{boxedminipage}{\linewidth}
-\scriptsize\verbatiminput{goadFlags.txt}
+\scriptsize\verbatiminput{openadUpdateFlags.txt}
 \end{boxedminipage}\\[1ex]
 Typically it will be invoked without any flags. To obtain the examples for this manual 
 one will, however,  need the Mercurial tool \cite{mercurialWeb} and use the \lstinline{-t} flag; 
 see also \refsec{sec:compilingManual}.
-The \lstinline{goad} script uses the 
+The \lstinline{openadUpdate} script uses the 
 default locations for the component repositories given in 
 \lstinline{$OPENADROOT/openad_config.py}. %$
-A log named \lstinline{goad.}{\em timestamp}\lstinline{.log~} will contain  output and 
+A log named \lstinline{openadUpdate.}{\em timestamp}\lstinline{.log~} will contain  output and 
 potential error messages.
 
-The \lstinline{scmStatus} script is primarily for development purposes to obtain an overview 
+The \lstinline{openadStatus} script is primarily for development purposes to obtain an overview 
 of the status of the various repositories. It can also be used to see if an update from 
 the source repositories is ready. That would be indicated by an \lstinline{I} in the 
-\lstinline{Remote} column of \lstinline{scmStatus} output such as the following. \\[1ex]
+\lstinline{Remote} column of \lstinline{openadStatus} output such as the following. \\[1ex]
 \begin{boxedminipage}{\linewidth}
-\scriptsize\verbatiminput{scmStatusOutput.txt}
+\scriptsize\verbatiminput{openadStatusOutput.txt}
 \end{boxedminipage}\\[1ex]
 The script  provides the following command line flags.\\[1ex]
 \begin{boxedminipage}{\linewidth}
-\scriptsize\verbatiminput{scmStatusFlags.txt}
+\scriptsize\verbatiminput{openadStatusFlags.txt}
 \end{boxedminipage}\\[1ex]
-Unlike \lstinline{goad}, the \lstinline{scmStatus} script determines the repository type and URL 
+Unlike \lstinline{openadUpdate}, the \lstinline{openadStatus} script determines the repository type and URL 
 not based on the defaults in  \lstinline{$OPENADROOT/openad_config.py} %$
 but instead uses the actual data found in the respective directories.
 
@@ -2989,7 +2989,7 @@ one also needs \lstinline{dot}, \lstinline{fig2dev}, and
 \lstinline{dia} for the conversion of figures. 
 The manual's \lstinline{Makefile} requires a source installation of \OpenADF\
 from the source code repository with all extra tests and examples using \\[1ex]
-\hspace*{.3cm}\lstinline{goad -t}\\[1ex]
+\hspace*{.3cm}\lstinline{openadUpdate -t}\\[1ex]
 The environment must be setup as described in \refsec{sec:env}.
 The manual refers to a {\bf set of code examples} which are 
 linked from the \OpenADF\ installation by the \lstinline{Makefile}.
