--- a/Manual/autodiff.bib
+++ b/Manual/autodiff.bib
@@ -10069,20 +10069,20 @@
 
 @ARTICLE{
 	   Stammer2002Tgo,
-	AUTHOR = "D. Stammer and C. Wunsch and R. Giering and C. Eckert and P. Heimbach and J.
+	author = "D. Stammer and C. Wunsch and R. Giering and C. Eckert and P. Heimbach and J.
 	   Marotzke and A. Adcroft and C. N. Hill and J. Marshall",
-	TITLE = "{The global ocean circulation during 1992-1997, estimated from ocean observations and
-	   a general circulation model}",
-	JOURNAL = "J. Geophys. Res.",
-	YEAR = "2002",
-	NUMBER = "C9",
-	VOLUME = "107",
-	PAGES = "doi:10.1029/2001JC000888",
-	URL = "http://www.ecco-group.org/publications.html",
-	PDF = "http://www.soes.soton.ac.uk/staff/jym/Papers/Ecco_paper_1_rev.pdf",
-	AD_TOOLS = "TAMC",
-	AD_AREA = "Oceanography",
-	AD_THEOTECH = "Adjoint"
+	title = "The global ocean circulation during 1992-1997, estimated from ocean observations and
+	   a general circulation model",
+	journal = "J. Geophys. Res.",
+	year = "2002",
+	number = "C9",
+	volume = "107",
+	pages = "doi:10.1029/2001JC000888",
+	url = "http://www.ecco-group.org/publications.html",
+	pdf = "http://www.soes.soton.ac.uk/staff/jym/Papers/Ecco_paper_1_rev.pdf",
+	ad_tools = "TAMC",
+	ad_area = "Oceanography",
+	ad_theotech = "Adjoint"
 }
 
 @ARTICLE{
@@ -19127,5 +19127,42 @@
 	month = "May",
 	year = "1997",
 	ad_key = "phd"
+}
+
+@PHDTHESIS{
+	   Vehreschild2009ADf,
+	type = "Dissertation",
+	url = "http://darwin.bth.rwth-aachen.de/opus3/volltexte/2009/2680/",
+	author = "A. Vehreschild",
+	title = "Automatisches Differenzieren f{\"u}r {MATLAB}",
+	school = "Department of Computer Science, RWTH Aachen University",
+	year = "2009",
+	ad_tools = "ADiMat"
+}
+
+@ARTICLE{
+	   Rasch2009SSO,
+	author = "A. Rasch and H. M. B{\"u}cker and A. Bardow",
+	title = "Software Supporting Optimal Experimental Design: {A} Case Study of Binary Diffusion
+	   Experiments Using {EFCOSS}",
+	journal = "Computers \& Chemical Engineering",
+	pages = "838--849",
+	doi = "10.1016/j.compchemeng.2008.12.008",
+	abstract = "Methods for optimal experimental design aim at minimizing uncertainty in parameter
+	   estimation problems. Despite their long tradition in applied mathematics and importance in practical
+	   applications, they are currently not widely used in computational science and engineering. To make
+	   the techniques of optimal experimental design more accessible to a broader community, we introduce a
+	   novel software environment called EFCOSS and demonstrate its ease of use and versatility in two case
+	   studies of binary diffusion experiments. Through the use of a component-based software architecture,
+	   integration of automatic differentiation technology and facilitated interfacing to optimization
+	   algorithms, EFCOSS minimizes the computational overhead for the user who can thus focus on model
+	   development and analysis itself. The presented case studies focus on diffusion experiments in
+	   liquids since these experiments are typically very demanding. The use of optimal experimental design
+	   techniques allows to reduce experimental time and effort significantly.",
+	year = "2009",
+	volume = "33",
+	number = "4",
+	ad_area = "Process Engineering",
+	ad_tools = "ADIFOR"
 }
 
