fixed space after \LaTeX command

--- a/Manual/openad.tex
+++ b/Manual/openad.tex
@@ -2991,7 +2991,7 @@ line flags that were not present for \lstinline{goad}. Details can be found in \
 \end{description}
 % -----------------------------------------------------------------------------------------
 \section{Compiling and Contributing to this Manual}\label{sec:compilingManual}
-The \LaTeX  sources of this manual are kept under 
+The \LaTeX\ sources of this manual are kept under 
 mercurial revision control. Details how to download 
 the manual can be found on the \OpenADF\ website under ``Documentation''.  
 In addition to \LaTeX  (in particular \lstinline{pdflatex}) 
